Add files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,20 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+Nullpomino/config/setting/global.cfg
+Nullpomino/config/setting/mode.cfg
+Nullpomino/config/setting/slick.cfg
+Nullpomino/log/log_slick.txt
+Nullpomino/replay/2019_10_22_23_12_15.rep
+Nullpomino/config/setting/global.cfg
+Nullpomino/config/setting/mode.cfg
+Nullpomino/config/setting/slick.cfg
+Nullpomino/log/log_slick.txt
+Nullpomino/config/setting/global.cfg
+Nullpomino/config/setting/mode.cfg
+Nullpomino/config/setting/slick.cfg
+Nullpomino/log/log_slick.txt
+Nullpomino/config/setting/global.cfg
+Nullpomino/config/setting/mode.cfg
+Nullpomino/config/setting/slick.cfg
+Nullpomino/log/log_slick.txt
