--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,6 @@ Nullpomino/config/setting/global.cfg
 Nullpomino/config/setting/mode.cfg
 Nullpomino/config/setting/slick.cfg
 Nullpomino/log/log_slick.txt
+Nullpomino/log/log_slick.txt
+Nullpomino/config/setting/slick.cfg
+Nullpomino/config/setting/global.cfg
