--- a/Nullpomino/config/setting/slick.cfg
+++ b/Nullpomino/config/setting/slick.cfg
@@ -1,5 +1,5 @@
 #NullpoMino Slick-frontend Config
-#Sat Oct 19 23:01:11 EDT 2019
+#Tue Nov 19 18:37:47 EST 2019
 option.alternateFPSDynamicAdjust=false
 key.p0.up=57
 option.fullscreen=false
